Resolves: tdf#82532 parent mutex dtored before child dtor uses it

Mutex belonged to DisposeListenerGridBridge which inherits from
FmXDisposeListener, FmXDisposeListener dtor accesses a reference
to the parent mutex in its dtor, but the mutex has been destroyed
at this point.

Move the mutex from parent to child. FWIW these classes are on
the candidate list to merge.

Change-Id: Ic639eaed97c2b0625c368ed249f09920af37f94e