svx/source/form/fmtools.cxx
@@ -259,7 +259,6 @@ void CursorWrapper::ImplConstruct(const Reference< css::sdbc::XResultSet>& _rxCu
         m_xGeneric = m_xMoveOperations.get();
 }
 
-
 CursorWrapper& CursorWrapper::operator=(const Reference< css::sdbc::XRowSet>& _rxCursor)
 {
     m_xMoveOperations.set(_rxCursor, UNO_QUERY);
@@ -274,19 +273,16 @@ CursorWrapper& CursorWrapper::operator=(const Reference< css::sdbc::XRowSet>& _r
     return *this;
 }
 
-
 FmXDisposeListener::~FmXDisposeListener()
 {
     setAdapter(nullptr);
 }
 
-
 void FmXDisposeListener::setAdapter(FmXDisposeMultiplexer* pAdapter)
 {
-    ::osl::MutexGuard aGuard(m_rMutex);
+    ::osl::MutexGuard aGuard(m_aMutex);
     m_pAdapter = pAdapter;
 }
-
 
 FmXDisposeMultiplexer::FmXDisposeMultiplexer(FmXDisposeListener* _pListener, const Reference< css::lang::XComponent>& _rxObject)
     :m_xObject(_rxObject)
@@ -298,7 +294,6 @@ FmXDisposeMultiplexer::FmXDisposeMultiplexer(FmXDisposeListener* _pListener, con
     if (m_xObject.is())
         m_xObject->addEventListener(this);
 }
-
 
 FmXDisposeMultiplexer::~FmXDisposeMultiplexer()
 {
